@@ -1,5 +1,8 @@
 2005-08-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* input/mutopia/R.Schumann/GNUmakefile (examples): switch off
+	romanze28-2 example.
+
 	* scm/ps-to-png.scm: remove dir-re function.
 	(make-ps-images): generate page names, instead of globbing them.
 	This brings down LilyPond memory usage for make web by a factor
